# cse234

./: .gitignore  .gitmodules  data_generation.py  dataprep-test.ipynb  dataprep.py  driver.py  main.py  models.py  mypy.ini  pyproject.toml  requirements.txt
cerebro_ts/: __main__.py  generate.py  logging.py  logs.py  main.py  models.py  prepare.py  timing.py  utils.py
notes/: cloudlab.md
scripts/: run.sh  update.sh
