[tool.black]
line-length = 80
skip-string-normalization = true
exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \.svn
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
line_length = 80
skip_gitignore = true

[tool.poetry]
name = 'cse234'
version = '0.0.0'
description = ''
authors = []

[tool.poetry.dependencies]
python = '~3.9'

cerebro-dl = { path = 'vendor/cerebro', develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
